--- a/Proyecto1/template/base.html
+++ b/Proyecto1/template/base.html
@@ -23,13 +23,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Notas</a>
+                <a class="nav-link" href="/notes">Notas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Reuniones</a>
+                <a class="nav-link" href="/meetings">Reuniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tareas</a>
+                <a class="nav-link" href="/tasks">Tareas</a>
               </li>
             </ul>
           </div>
