--- a/Proyecto1/template/notes.html
+++ b/Proyecto1/template/notes.html
@@ -5,9 +5,9 @@
 
 {% block content %}
     <h1 class="d-inline-block">Notas</h1>
-    <a href="/notes/new" class="btn btn-outline-success m-2">
+    <button type="button" class="btn btn-outline-success m-2" data-bs-toggle="modal" data-bs-target="#new">
         <i class="bi-plus"></i>
-    </a>
+    </button>
     <div class="row">
         {% for note in notes %}
             <div class="col-3 m-2">
@@ -15,22 +15,106 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ note.title }}</h5>
                         <p class="card-text">{{ note.text }}</p>
-                        <a href="#" class="btn btn-outline-primary">
+                        <button type="button" class="btn btn-outline-primary d-inline-block" data-bs-toggle="modal" data-bs-target="#edit-{{ note.id }}">
                             <i class="bi-pencil"></i>
-                        </a>
-                        <form action="/notes/{{ note.id }}/delete" method="post" class="d-inline-block">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-outline-danger">
-                                <i class="bi-trash3"></i>
-                            </button> 
-                        </form>
+                        </button>
+                        <button type="button" class="btn btn-outline-danger d-inline-block" data-bs-toggle="modal" data-bs-target="#delete-confirmation-{{ note.id }}">
+                            <i class="bi-trash3"></i>
+                        </button>
                     </div>
                     <div class="card-footer text-muted">
                         {{ note.date }}
                     </div>
                 </div>
             </div>
+  <!-- Delete Modal -->
+  <div class="modal fade" id="delete-confirmation-{{ note.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Delete Note</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to delete this note?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <form action="/notes/{{ note.id }}/delete" method="post" class="d-inline-block">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Edit Modal -->
+  <div class="modal fade" id="edit-{{ note.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Edit Note</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
+        </div>
+        <form action="/notes/{{ note.id }}/edit" method="post">
+            {% csrf_token %}
+             <div class="modal-body">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Titulo</label>
+                    <input type="texto" class="form-control" id="title" name="title" placeholder="Escriba un titulo" value="{{ note.title }}">
+                  </div>
+                  <div class="mb-3">
+                    <label for="text" class="form-label">Texto de la nota</label>
+                    <textarea class="form-control" id="text" name="text" rows="3">{{ note.text }}</textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="color" class="form-label">Color</label>
+                    <input type="color" class="form-control form-control-color" id="color" name="color" title="Elegi tu color" value="{{ note.color }}">
+            
+                  </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                  <button type="submit" class="btn btn-success">Edit</button>
+              </div>
+       
+        </form>
+      </div>
+    </div>
+  </div>
         {% endfor %}
-     
+     <!-- New Modal -->
+  <div class="modal fade" id="new" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">New Note</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
+        </div>
+        <form action="/notes/new" method="post">
+            {% csrf_token %}
+             <div class="modal-body">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Titulo</label>
+                    <input type="texto" class="form-control" id="title" name="title" placeholder="Escriba un titulo">
+                  </div>
+                  <div class="mb-3">
+                    <label for="text" class="form-label">Texto de la nota</label>
+                    <textarea class="form-control" id="text" name="text" rows="3">...</textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="color" class="form-label">Color</label>
+                    <input type="color" class="form-control form-control-color" id="color" name="color" title="Elegi tu color">
+                  </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                  <button type="submit" class="btn btn-success">Create</button>
+              </div>
+       
+        </form>
+      </div>
+    </div>
+  </div>
     </div>
 {% endblock %}
