--- a/Proyecto1/template/base.html
+++ b/Proyecto1/template/base.html
@@ -8,25 +8,21 @@
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/notes.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    Hola Bienvenido <strong>{{user.username|capfirst}}</strong>
-  </header>
-  
-  <section>
-    <a href="/cerrar">Cerrar Sesion</a>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="login">Organizador</a>
+          {% if user.is_authenticated %}
+          <a class="navbar-brand" href="/">Organizador</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/home">Home</a>
+                <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/notes">Notas</a>
@@ -39,9 +35,16 @@
               </li>
             </ul>
           </div>
+          <form class="d-flex">
+            <div class="username">{{user.username|capfirst}}</div>
+            <a href="/logout" class="btn btn-outline-danger">Cerrar Sesión</a>
+          </form>
+          {% else %}
+            <a class="navbar-brand" href="/login">Organizador</a>
+          {% endif %}
         </div>
       </nav>
-      <div class="container-fluid">
+      <div class="container-fluid p-4">
         {% block content %}{% endblock %}
       </div>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
