--- a/Proyecto1/template/meetings.html
+++ b/Proyecto1/template/meetings.html
@@ -4,10 +4,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="d-inline-block">Meetings</h1>
-    <button type="button" class="btn btn-outline-success m-2" data-bs-toggle="modal" data-bs-target="#new">
+<div class="card">
+  <div class="card-header">
+    <h4 class="d-inline-block">Reuniones</h4>
+    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#new">
         <i class="bi-plus"></i>
     </button>
+  </div>
+  <div class="card-body">
     <div class="row">
         {% for meeting in meetings %}
             <div class="col-3 m-2">
@@ -32,11 +36,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Delete Meeting</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Eliminar Reunión</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
         </div>
         <div class="modal-body">
-          Are you sure you want to delete this meeting?
+          Estas seguro de que deseas eliminar esta reunión?
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -53,7 +57,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Edit Meeting</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Editar Reunión</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
         </div>
         <form action="/meetings/{{ meeting.id }}/edit" method="post">
@@ -68,14 +72,14 @@
                     <input type="texto" class="form-control" id="place" name="place" placeholder="Escriba una locación" value="{{ meeting.place }}">
                   </div>
                   <div class="mb-3">
-                    <label for="date" class="form-label">Date</label>
+                    <label for="date" class="form-label">Fecha</label>
                     <input type="datetime-local" class="form-control form-control-date" id="date" name="date" title="Elija la fecha" value="{{ meeting.date }}">
             
                   </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-success">Edit</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                  <button type="submit" class="btn btn-success">Guardar</button>
               </div>
        
         </form>
@@ -88,7 +92,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">New Meeting</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Nueva Reunión</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
         </div>
         <form action="/meetings/new" method="post">
@@ -104,15 +108,15 @@
                     <input type="texto" class="form-control" id="place" name="place" placeholder="Escriba una locación">
                   </div>
                   <div class="mb-3">
-                    <label for="date" class="form-label">Date</label>
+                    <label for="date" class="form-label">Fecha</label>
                     <input type="datetime-local" class="form-control form-control-date" id="date" name="date" title="Elija la fecha">
             
                   </div>
               </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-success">Create</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                  <button type="submit" class="btn btn-success">Crear</button>
               </div>
        
         </form>
@@ -120,4 +124,6 @@
     </div>
   </div>
     </div>
+  </div>
+</div>
 {% endblock %}
