--- a/Proyecto1/template/notes.html
+++ b/Proyecto1/template/notes.html
@@ -4,10 +4,15 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="d-inline-block">Notas</h1>
-    <button type="button" class="btn btn-outline-success m-2" data-bs-toggle="modal" data-bs-target="#new">
+<div class="card">
+  <div class="card-header">
+    <h4 class="d-inline-block">Notas</h4>
+    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#new">
         <i class="bi-plus"></i>
     </button>
+  </div>
+  <div class="card-body">
+    
     <div class="row">
         {% for note in notes %}
             <div class="col-3 m-2">
@@ -32,17 +37,17 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Delete Note</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Eliminar Nota</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
         </div>
         <div class="modal-body">
-          Are you sure you want to delete this note?
+          Estas seguro de que deseas eliminar esta nota?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
           <form action="/notes/{{ note.id }}/delete" method="post" class="d-inline-block">
             {% csrf_token %}
-            <button type="submit" class="btn btn-danger">Delete</button>
+            <button type="submit" class="btn btn-danger">Eliminar</button>
         </form>
         </div>
       </div>
@@ -53,7 +58,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Edit Note</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Editar Nota</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
         </div>
         <form action="/notes/{{ note.id }}/edit" method="post">
@@ -74,8 +79,8 @@
                   </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-success">Edit</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                  <button type="submit" class="btn btn-success">Guardar</button>
               </div>
        
         </form>
@@ -88,7 +93,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">New Note</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Nueva Nota</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cancel"></button>
         </div>
         <form action="/notes/new" method="post">
@@ -108,8 +113,8 @@
                   </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-success">Create</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                  <button type="submit" class="btn btn-success">Crear</button>
               </div>
        
         </form>
@@ -117,4 +122,7 @@
     </div>
   </div>
     </div>
+    
+  </div>
+</div>
 {% endblock %}
